IMG stretch fix attempt 2

--- a/staging/assets/css/main.css
+++ b/staging/assets/css/main.css
@@ -109,7 +109,7 @@
 }
 	
 .portrait2 {
-	
+	height: 200px;
 	width: 250px;
 	/* top: -142px; */
 	border-radius: 50%;
